# pyshrimp

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  setup.cfg
.github/workflows/: run-tests.yml
doc/: build.md
doc/assets/img/logo/: README.md  (+1 more)
docker/post_release_test/: Dockerfile
docker/post_release_test/scripts/: run-post-release-test.sh  verify-release-script.py
examples/basic/: hello_devloop_with_magic.py  hello_devloop_without_magic.py  hello_external_requirements.py  hello_pipes_with_function_syntax.py  hello_pipes_with_pipe_syntax.py  hello_sudo.py  hello_world.py  hello_world_with_magic.py
examples/complex/: send_keys_to_window.py  show_recently_created_issues.py  stop_services.py  stop_services.test_runner.py
scripts/: build-and-deploy.py
src/pyshrimp/: __init__.py  exception.py
src/pyshrimp/execution_pipeline/: pipeline.py  pipeline_api.py  pipeline_starter.py
src/pyshrimp/utils/: collections.py  command.py  dotdict.py  filesystem.py  locking.py  logging.py  matching.py  parallel.py  splitter.py  string_wrapper.py  subprocess_utils.py  table_parser.py  wait.py
tests/common/: background_execution.py  extended_test_case.py  platform_utils.py  resources_accessor.py
tests/smoke/: test_examples.py  test_scriptrunner.py
tests/unit/: test_collections_utils.py  test_command.py  test_dotdict.py  test_execution_pipeline.py  test_filesystem_utils.py  test_locking_utils.py  test_matching_utils.py  test_parallel_utils.py  test_splitter.py  test_string_wrapper.py  test_subprocess_utils.py  test_table_parser.py  test_wait_utils.py
(+20 files in other folders)
