[metadata]
name = pyshrimp
version = 0.1.0
author = Aleksander Mierzwicki
author_email = ali.pypipublic@osomdev.pl
description = PyShrimp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/osomdev/pyshrimp
license = MIT
platform = Linux
project_urls =
    Bug Tracker = https://github.com/osomdev/pyshrimp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyshrimp = pyshrimp._internal.scriptrunner.bootstrap:_bootstrap